librespeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
      - name: librespeed
        image: adolfintel/speedtest:latest
        ports:
        - containerPort: 80

---



apiVersion: v1
kind: Service
metadata:
  name: librespeed-service
spec:
  selector:
    app: librespeed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000   # Выберите свободный порт для NodePort (например, 30000)
  type: NodePort       # Измените тип на NodePort
